Social media landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to https://gmasse.github.io/blog/</title>
-<meta http-equiv="refresh" content="0; URL=https://gmasse.github.io/blog/">
-<link rel="canonical" href="https://gmasse.github.io/blog/">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Germain Masse</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <img src="images/profile.jpg" alt="Profile" class="avatar" />
+      <h1>Germain Masse</h1>
+      <p class="bio">Driving AI product adoption at <a href="https://ovhcloud.com" target="_blank">OVHcloud</a>.<br>Formerly Head of Baremetal &amp; Network.<br>#AI #Cloud #Sustainability &#x1F1E8;&#x1F1E6; &#x1F1EA;&#x1F1FA;</p>
+
+      <div class="links">
+        <a href="https://www.linkedin.com/in/germainmasse" target="_blank" class="link-card link-linkedin">
+          <span>LinkedIn</span>
+        </a>
+        <a href="https://bsky.app/profile/g.masse.me" target="_blank" class="link-card link-bluesky">
+          <span>Bluesky</span>
+        </a>
+        <a href="https://mastodon.social/@gmasse" target="_blank" class="link-card link-mastodon">
+          <span>Mastodon</span>
+        </a>
+        <a href="https://github.com/gmasse" target="_blank" class="link-card link-github">
+          <span>GitHub</span>
+        </a>
+        <a href="https://g.masse.me/blog" target="_blank" class="link-card link-blog">
+          <span>Read my blog</span>
+        </a>
+      </div>
+
+      <footer>
+        <p xmlns:cc="http://creativecommons.org/ns#">This work is licensed under <a href="https://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""></a></p>
+      </footer>
+    </div>
+  </body>
+</html>
